# evon-smart-home-homeassistant-integration

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT.md  LICENSE  README.md  RELEASING.md  eslint.config.js  hacs.json  info.md  package-lock.json  package.json  pyproject.toml  renovate.json  requirements-test.txt  ws-security-door.mjs  ws-switch-listener.mjs
.github/workflows/: ci.yml  codeql.yml
custom_components/evon/: __init__.py  api.py  base_entity.py  binary_sensor.py  button.py  camera.py  camera_recorder.py  climate.py  config_flow.py  const.py  coordinator.py  cover.py  device_trigger.py  diagnostics.py  event.py  image.py  light.py  logbook.py  manifest.json  select.py  sensor.py  services.yaml  statistics.py  strings.json  switch.py  ws_client.py  ws_control.py  ws_mappings.py
custom_components/evon/coordinator/: __init__.py  button_press.py
custom_components/evon/coordinator/processors/: __init__.py  air_quality.py  bathroom_radiators.py  blinds.py  button_events.py  cameras.py  climate.py  home_states.py  intercoms.py  lights.py  scenes.py  switches.py  (+3 more)
custom_components/evon/translations/: cs.json  de.json  en.json  es.json  fr.json  it.json  pl.json  pt.json  sk.json  sl.json
custom_components/evon/www/: evon-camera-recording-card.js
docs/: BLIND_TILT_BEHAVIOR.md  CODE_ANALYSIS_BACKLOG.md  ENERGY_STATISTICS.md  WEBSOCKET_API.md
docs/plans/: 2026-02-14-high-severity-stability-fixes-design.md  2026-02-14-high-severity-stability-fixes.md  2026-02-15-features-and-bugfix-design.md  2026-02-15-features-and-bugfix.md  2026-02-22-combined-light-target-brightness-design.md  2026-02-22-combined-light-target-brightness.md
scripts/: ha-deploy.sh  ha-logs.sh
src/: api-client.ts  auth.ts  config.ts  constants.ts  helpers.ts  index.ts  types.ts  ws-client.ts
src/resources/: blinds.ts  climate.ts  home-state.ts  index.ts  lights.ts  radiators.ts  summary.ts
src/tools/: blinds.ts  climate.ts  generic.ts  home-state.ts  index.ts  lights.ts  radiators.ts  sensors.ts
tests/: __init__.py  conftest.py  test_api.py  test_base_entity.py  test_binary_sensor.py  test_binary_sensor_unit.py  test_brightness_edges.py  test_bulk_service_failures.py  test_button.py  test_button_events.py  test_camera.py  test_camera_mp4.py  test_camera_recorder.py  test_climate.py  test_concurrent_updates.py  test_config_flow.py  test_config_flow_unit.py  test_constants.py  test_coordinator.py  test_coordinator_energy.py  test_coordinator_ws_cow.py  test_cover.py  test_cover_unit.py  test_device_trigger.py  test_diagnostics.py  test_diagnostics_unit.py  test_energy_rollover.py  test_event.py  test_image.py  test_instance_id_extraction.py  test_light.py  test_optimistic_state.py  test_options_flow.py  test_options_flow_handler.py  test_processors.py  test_reconnect_delay.py  test_recording_services.py  test_select.py  test_select_unit.py  test_sensor.py  (+11 more)
tests-mcp/: api-client.test.js  index.test.js  registry.test.js  ws-client.test.js
