[project]
name = "evon-smart-home"
version = "1.16.0"
description = "Home Assistant custom integration for Evon Smart Home"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async (async/await best practices)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in HA for **kwargs)
    "ARG002", # unused method argument
    "ARG004", # unused static method argument (HA pattern for async_get_options_flow)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]  # Allow unused arguments in tests
"tests/conftest.py" = ["E402", "I001", "SIM102"]  # sys.path manipulation requires imports after code

[tool.ruff.lint.isort]
known-first-party = ["custom_components.evon"]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
